deployment/cicd/kustomize/overlays/staging/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phonebill-front
spec:
  replicas: 2
  template:
    spec:
      containers:
      - name: phonebill-front
        resources:
          requests:
            cpu: 512m
            memory: 512Mi
          limits:
            cpu: 2048m
            memory: 2048Mi
