deployment/cicd/kustomize/overlays/staging/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phonebill-front
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - phonebill-front-staging.domain.com
      secretName: phonebill-front-staging-tls
  rules:
    - host: phonebill-front-staging.domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: phonebill-front
                port:
                  number: 8080
